fix(client): :bug: overflow add partners

--- a/client/src/components/Pages/dispositif/Edition/SponsorsEdit/SponsorsEdit.module.scss
+++ b/client/src/components/Pages/dispositif/Edition/SponsorsEdit/SponsorsEdit.module.scss
@@ -8,9 +8,3 @@
   display: flex;
   align-items: center;
 }
-
-.add {
-  margin-left: u(10);
-  box-shadow: none !important;
-  text-wrap: nowrap;
-}
